@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2019 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -115,7 +115,7 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
     {
         implType.checkObjectClass(IDataTransferNode.class);
         try {
-            return implType.getObjectClass(IDataTransferNode.class).newInstance();
+            return implType.getObjectClass(IDataTransferNode.class).getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             throw new DBException("Can't create data transformer node", e);
         }
@@ -125,7 +125,7 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
     {
         settingsType.checkObjectClass(IDataTransferSettings.class);
         try {
-            return settingsType.getObjectClass(IDataTransferSettings.class).newInstance();
+            return settingsType.getObjectClass(IDataTransferSettings.class).getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             throw new DBException("Can't create node settings", e);
         }
@@ -162,8 +162,7 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
      * @param sourceObjects object types
      * @return list of editors
      */
-    public Collection<DataTransferProcessorDescriptor> getAvailableProcessors(Collection<DBSObject> sourceObjects)
-    {
+    public List<DataTransferProcessorDescriptor> getAvailableProcessors(Collection<DBSObject> sourceObjects) {
         List<DataTransferProcessorDescriptor> editors = new ArrayList<>();
         for (DataTransferProcessorDescriptor descriptor : processors) {
             boolean supports = true;
@@ -186,6 +185,16 @@ public class DataTransferNodeDescriptor extends AbstractDescriptor
             }
         }
         return editors;
+    }
+
+    public List<DataTransferProcessorDescriptor> getAvailableProcessors(Class<?> objectType) {
+        List<DataTransferProcessorDescriptor> procList = new ArrayList<>();
+        for (DataTransferProcessorDescriptor descriptor : this.processors) {
+            if (descriptor.appliesToType(objectType)) {
+                procList.add(descriptor);
+            }
+        }
+        return procList;
     }
 
     public DataTransferProcessorDescriptor getProcessor(String id)
