@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2019 Serge Rider (serge@jkiss.org)
+ * Copyright (C) 2010-2020 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -134,11 +134,14 @@ public class GeneralUtils {
     }
 
     public static String convertToString(byte[] bytes, int offset, int length) {
+        if (length == 0) {
+            return "";
+        }
         char[] chars = new char[length];
         for (int i = offset; i < offset + length; i++) {
             int b = bytes[i];
-            if (b < 0) b = -b + 127;
-            if (b < 32) b = 32;
+            if (b < 0) b = 256 + b;
+            if (b < 32 || (b >= 0x7F && b <= 0xA0)) b = 32;
             chars[i - offset] = (char) b;
         }
         return new String(chars);
@@ -203,21 +206,21 @@ public class GeneralUtils {
             } else if (valueType == Boolean.class || valueType == Boolean.TYPE) {
                 return Boolean.valueOf(value);
             } else if (valueType == Long.class) {
-                return Long.valueOf(value);
+                return Long.valueOf(normalizeIntegerString(value));
             } else if (valueType == Long.TYPE) {
-                return Long.parseLong(value);
+                return Long.parseLong(normalizeIntegerString(value));
             } else if (valueType == Integer.class) {
-                return new Integer(value);
+                return Integer.valueOf(normalizeIntegerString(value));
             } else if (valueType == Integer.TYPE) {
-                return Integer.parseInt(value);
+                return Integer.parseInt(normalizeIntegerString(value));
             } else if (valueType == Short.class) {
-                return Short.valueOf(value);
+                return Short.valueOf(normalizeIntegerString(value));
             } else if (valueType == Short.TYPE) {
-                return Short.parseShort(value);
+                return Short.parseShort(normalizeIntegerString(value));
             } else if (valueType == Byte.class) {
-                return Byte.valueOf(value);
+                return Byte.valueOf(normalizeIntegerString(value));
             } else if (valueType == Byte.TYPE) {
-                return Byte.parseByte(value);
+                return Byte.parseByte(normalizeIntegerString(value));
             } else if (valueType == Double.class) {
                 return Double.valueOf(value);
             } else if (valueType == Double.TYPE) {
@@ -227,7 +230,7 @@ public class GeneralUtils {
             } else if (valueType == Float.TYPE) {
                 return Float.parseFloat(value);
             } else if (valueType == BigInteger.class) {
-                return new BigInteger(value);
+                return new BigInteger(normalizeIntegerString(value));
             } else if (valueType == BigDecimal.class) {
                 return new BigDecimal(value);
             } else {
@@ -237,6 +240,11 @@ public class GeneralUtils {
             log.error(e);
             return value;
         }
+    }
+
+    private static String normalizeIntegerString(String value) {
+        int divPos = value.lastIndexOf('.');
+        return divPos == -1 ? value : value.substring(0, divPos);
     }
 
     public static Throwable getRootCause(Throwable ex) {
@@ -422,23 +430,46 @@ public class GeneralUtils {
 
     @NotNull
     public static String generateVariablesLegend(@NotNull String[][] vars) {
+        String[] varPatterns = new String[vars.length];
+        int patternMaxLength = 0;
+        for (int i = 0; i < vars.length; i++) {
+            varPatterns[i] = GeneralUtils.variablePattern(vars[i][0]);
+            patternMaxLength = Math.max(patternMaxLength, varPatterns[i].length());
+        }
         StringBuilder text = new StringBuilder();
-        for (String[] var : vars) {
-            text.append(GeneralUtils.variablePattern(var[0])).append("\t- ").append(var[1]).append("\n");
+        for (int i = 0; i < vars.length; i++) {
+            text.append(varPatterns[i]);
+            // Indent
+            for (int k = 0; k < patternMaxLength - varPatterns[i].length(); k++) {
+                text.append(' ');
+            }
+            text.append(" - ").append(vars[i][1]).append("\n");
         }
         return text.toString();
     }
 
     @NotNull
     public static String replaceVariables(@NotNull String string, IVariableResolver resolver) {
+        if (CommonUtils.isEmpty(string)) {
+            return string;
+        }
+        // We save resolved vars here to avoid resolve recursive cycles
+        List<String> resolvedVars = null;
         try {
             Matcher matcher = VAR_PATTERN.matcher(string);
             int pos = 0;
             while (matcher.find(pos)) {
                 pos = matcher.end();
                 String varName = matcher.group(2);
+                if (resolvedVars != null && resolvedVars.contains(varName)) {
+                    continue;
+                }
                 String varValue = resolver.get(varName);
                 if (varValue != null) {
+                    if (resolvedVars == null) {
+                        resolvedVars = new ArrayList<>();
+                        resolvedVars.add(varName);
+                    }
                     if (matcher.start() == 0 && matcher.end() == string.length() - 1) {
                         string = varValue;
                     } else {
